codegen/ui_tests/rhai_fn_rename_collision_oneattr.stderr
error: duplicate Rhai signature for 'foo'
  --> ui_tests/rhai_fn_rename_collision_oneattr.rs:17:12
   |
17 |     pub fn foo(input: Point) -> bool {
   |            ^^^

error: duplicated function 'foo'
  --> ui_tests/rhai_fn_rename_collision_oneattr.rs:12:15
   |
12 |     #[rhai_fn(name = "foo")]
   |               ^^^^
